--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -9,3 +9,10 @@ jim:
   last_name: "Hoskins"
   email: "jim@teamtreehouse.com"
   profile_name: "jimhoskins"
+
+
+mike:
+  first_name: "Mike"
+  last_name: "The Frog"
+  emails: "mike@teamtreehouse.com"
+  profile_name: "mikethefrog"
